--- a/ultimate-datalayer.liquid
+++ b/ultimate-datalayer.liquid
@@ -1,4 +1,8 @@
-<script>    
+<script>
+  /**
+  * Version: 3.0.0
+  * Last Update: 14 Jun 2024
+  */
   (function() {
       class Ultimate_Shopify_DataLayer {
         constructor() {
